src/objects/QPMS__Sampling_Plan__c.object
<CustomObject>
    <description>This object will store information about the samples used for inspection .</description>
    <fields>
        <fullName>QPMS__AQL_Limit__c</fullName>
        <description>This field describes what AQL limit should be used for the sampling plan.</description>
        <label>AQL Limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.01</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                    <isActive>false</isActive>
                    <label>100</label>
                </value>
                <value>
                    <fullName>1000</fullName>
                    <isActive>false</isActive>
                    <label>1000</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                    <label>15</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <isActive>false</isActive>
                    <label>150</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <isActive>false</isActive>
                    <label>25</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <isActive>false</isActive>
                    <label>250</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <isActive>false</isActive>
                    <label>40</label>
                </value>
                <value>
                    <fullName>400</fullName>
                    <isActive>false</isActive>
                    <label>400</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <isActive>false</isActive>
                    <label>65</label>
                </value>
                <value>
                    <fullName>650</fullName>
                    <isActive>false</isActive>
                    <label>650</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__AQL_Table_Type__c</fullName>
        <description>This field describes type of AQL table used in the sampling plan.</description>
        <label>AQL Table Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <default>true</default>
                    <label>Single</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Accept_Point__c</fullName>
        <description>This Field  describe at what point samples will be accepted.</description>
        <label>Accept Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_By__c</fullName>
        <description>Formula for user name</description>
        <formula>Owner:User.FirstName+&apos; &apos;+ Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Critical__c</fullName>
        <description>This is a picklist  field and values which we got from the AQL table based on severity based AQL.</description>
        <label>Critical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.01</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                    <isActive>false</isActive>
                    <label>100</label>
                </value>
                <value>
                    <fullName>1000</fullName>
                    <isActive>false</isActive>
                    <label>1000</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                    <label>15</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <isActive>false</isActive>
                    <label>150</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <isActive>false</isActive>
                    <label>250</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <isActive>false</isActive>
                    <label>40</label>
                </value>
                <value>
                    <fullName>400</fullName>
                    <isActive>false</isActive>
                    <label>400</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <isActive>false</isActive>
                    <label>65</label>
                </value>
                <value>
                    <fullName>650</fullName>
                    <isActive>false</isActive>
                    <label>650</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>This field  describes summary  about the  Sampling plan.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Level__c</fullName>
        <description>This field  describes the  inspection level of sampling plan.</description>
        <label>Inspection Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Special 4</fullName>
                </value>
                <value>
                    <fullName>Special 3</fullName>
                </value>
                <value>
                    <fullName>Special 2</fullName>
                </value>
                <value>
                    <fullName>Special 1</fullName>
                </value>
                <value>
                    <fullName>General III</fullName>
                </value>
                <value>
                    <fullName>General II</fullName>
                </value>
                <value>
                    <fullName>General I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_State__c</fullName>
        <description>This field  describes the state of inspection  used for the sampling plan.</description>
        <label>Inspection State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Reduced</fullName>
                </value>
                <value>
                    <fullName>Tightened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Size_Max__c</fullName>
        <description>This field describes maximum Lot size.</description>
        <label>Lot Size (Max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Size_Min__c</fullName>
        <description>This field describes minimum Lot size.</description>
        <label>Lot Size (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Size__c</fullName>
        <description>This field describes Lot size.</description>
        <label>Lot Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Major__c</fullName>
        <description>This is a picklist field and values which we got from the AQL table based on severity based AQL.</description>
        <label>Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.01</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                    <isActive>false</isActive>
                    <label>100</label>
                </value>
                <value>
                    <fullName>1000</fullName>
                    <isActive>false</isActive>
                    <label>1000</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                    <label>15</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <isActive>false</isActive>
                    <label>150</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <isActive>false</isActive>
                    <label>25</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <isActive>false</isActive>
                    <label>250</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <isActive>false</isActive>
                    <label>40</label>
                </value>
                <value>
                    <fullName>400</fullName>
                    <isActive>false</isActive>
                    <label>400</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <isActive>false</isActive>
                    <label>65</label>
                </value>
                <value>
                    <fullName>650</fullName>
                    <isActive>false</isActive>
                    <label>650</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Minor__c</fullName>
        <description>This is a picklist field and values which we got from the AQL table based on severity based AQL.</description>
        <label>Minor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.01</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                    <isActive>false</isActive>
                    <label>100</label>
                </value>
                <value>
                    <fullName>1000</fullName>
                    <isActive>false</isActive>
                    <label>1000</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                    <label>15</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <isActive>false</isActive>
                    <label>150</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <isActive>false</isActive>
                    <label>25</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <isActive>false</isActive>
                    <label>250</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <isActive>false</isActive>
                    <label>40</label>
                </value>
                <value>
                    <fullName>400</fullName>
                    <isActive>false</isActive>
                    <label>400</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <isActive>false</isActive>
                    <label>65</label>
                </value>
                <value>
                    <fullName>650</fullName>
                    <isActive>false</isActive>
                    <label>650</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Name__c</fullName>
        <description>This field describes name of the sampling plan.</description>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Plan_Type__c</fullName>
        <description>This field  describes the which type of plan used for sampling plan.</description>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>This field is for to capture the reason of active and deactive of sampling plan</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reject_Point__c</fullName>
        <description>This Field describe at what point samples will  be rejected.</description>
        <label>Reject Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sample_Size__c</fullName>
        <description>This field  describe  size of the that we got from AQL table.</description>
        <label>Sample Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sampling_Plan_Number__c</fullName>
        <description>Hyper link for Sampling plan Record</description>
        <formula>HYPERLINK(&quot;/apex/SamplingPlan?Id=&quot; &amp; Id, Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sampling Plan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sampling_Plan_Status__c</fullName>
        <description>To Capture the status and digital signature Information</description>
        <label>Sampling Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field  describes the status of  Sampling plan.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Use_Severity_based_AQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field describes either to use severity based AQL or not.</description>
        <label>Use Severity based AQL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To validate the fields</description>
        <label>isSubmit</label>
        <type>Checkbox</type>
    </fields>
    <label>Sampling Plan</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Name__c</columns>
        <columns>QPMS__Description__c</columns>
        <columns>QPMS__Plan_Type__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>QPMS__Inspection_Level__c</columns>
        <columns>QPMS__Inspection_State__c</columns>
        <columns>QPMS__Use_Severity_based_AQL__c</columns>
        <columns>QPMS__Sample_Size__c</columns>
        <columns>QPMS__Lot_Size_Max__c</columns>
        <columns>QPMS__Lot_Size_Min__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Sampling Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sampling Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>